--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Kašnjenje letova</title>
+  <script src="https://use.fontawesome.com/3903c9d7fd.js"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css" rel="stylesheet">
   <style>
     body {
       background-image: url('/static/ppp.jpg'); 
@@ -12,6 +14,58 @@
       font-family: Arial, sans-serif; /* Postavite font za cijelu stranicu */
       margin: 0; /* Uklonite vanjske margine kako bi slika bila u potpunosti vidljiva */    
     }
+
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+  }
+  ul.menu {
+      display: inline-block;
+      list-style-type: none;
+  }
+
+  li.menu_list {
+      height: 100px;
+      width: 100px;
+      position: relative;
+  }
+
+  li.menu_list .front,
+  a.side {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100px;
+      width: 100%;
+      padding: 30px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      text-decoration: none;
+      text-transform: uppercase;
+      transition: all .5s ease-out;
+      cursor: pointer;
+  }
+  li.menu_list .front {
+      background-color: #34465d;
+      color: #7fb1b5;
+      transform-origin: 0 0;
+  }
+  a.side {
+      background-color: #7fb1b5;
+      color: #34465d;
+      transform-origin: 0 0 100px;
+      transform: rotateY(-90deg);
+      font-size: 12px;
+      font-weight: bold;
+  }
+  li.menu_list:hover a.side {
+      transform: rotateY(0deg);
+  }
+  li.menu_list:hover .front {
+      transform: rotateY(90deg);
+  }
 
     .forma {
       width: 400px; /* Širina forme */
@@ -26,8 +80,15 @@
       margin: 0 auto; /* Centriranje forme */
     }
 
-    h1, h3 {
-      color: #333;
+    .content {
+      flex-grow: 1;
+      padding: 20px;
+    }
+  
+
+
+    h3 {
+      color: #340;
     }
 
     label {
@@ -72,7 +133,28 @@
   </style>
 </head>
 <body>
-  <h1 style="text-align: center;" >Analiza i predviđanje kašnjenja letova</h1>
+  <ul class="menu">
+    <li class="menu_list">
+      <h1 style="text-align: left; margin-left: 115px; font-size: 35px; color: #FFF; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">ANALIZA I PREDVIĐANJE KAŠNJENJA LETOVA</h1>
+
+        <span class="front fas fa-home"></span>
+        <a href="#" class="side">Početna</a>
+      </li>
+    <li class="menu_list">
+        <span class="front fas fa-chart-bar"></span>
+        <a href="#" class="side">Performanse Aerodroma</a>
+    </li>
+    <li class="menu_list">
+        <span class="front fas fa-chart-pie"></span>
+        <a href="#" class="side">Performanse Aviokompanija</a>
+    </li>
+    <li class="menu_list">
+        <span class="front fas fa-clock"></span>
+        <span class="front fas fa-plane-departure"></span>
+        <a href="#" class="side">Predikcija kašnjenja</a>
+    </li>
+</ul>
+
   <div class="forma">
     <form action="{{ url_for('predict')}}" method="post">
       <h3>Kada putujete?</h3>
@@ -118,7 +200,8 @@
     </form>
     <br>
     <br>
-    <h2>{{ prediction_text }}</h2>
+    <h2>Predviđeno kašnjenje leta:</h2>
+    <h4>{{ prediction_text }} minuta</h4>
   </div>
   <!-- Prikaz slika -->
   <img src="{{ img1 }}" alt="Grafikon 1">
