--- a/templates/predictdelay.html
+++ b/templates/predictdelay.html
@@ -154,7 +154,7 @@
 
     <ul class="menu">
         <li class="menu_list">
-          <h1 style="text-align: left; margin-left: 115px; font-size: 35px; color: #FFF; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">ANALIZA I PREDVIĐANJE KAŠNJENJA LETOVA</h1>
+          <h1 style="text-align: left; margin-left: 115px; font-size: 30px; color: #FFF; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);">PREDVIĐANJE KAŠNJENJA LETOVA</h1>
     
             <span class="front fas fa-home"></span>
             <a href="/" class="side">Početna</a>
@@ -220,9 +220,8 @@
       <button type="submit" class="btn btn-primary btn-block btn-large">Predvidi kašnjenje leta</button>
     </form>
     <br>
-    <br>
     <h2>Predviđeno kašnjenje leta:</h2>
-    <h4>{{ prediction_text }}</h4>
+    <h3>{{ prediction_text }}</h3>
   </div>
 </div>
 </div>
